--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,7 +124,7 @@
             android:label="@string/title_activity_planifications"
             android:theme="@style/Theme.CCLApp.NoActionBar" />
         <activity
-            android:name=".activities.DashboardActivity2"
+            android:name=".activities.DashboardActivity"
             android:label="@string/title_activity_dashbooard"
             android:theme="@style/Theme.CCLApp" />
         <activity
